syntax = "proto3";
package message;
option go_package = "./message";

//  order request
message OrderRequest {
  string OrderId = 1;
  int64 timeStamp = 2;
}

//  订单信息
message OrderInfo {
  string OrderId = 1;
  string OrderName = 2;
  string OrderStatus = 3;
}

//  订单服务service定义  -- 远端调用的方法
service OrderService {
  rpc GetOrderInfo(OrderRequest) returns (OrderInfo);
}

// protoc --go-grpc_out=. message.proto
// protoc --go_out=. *.proto